<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/mochi_cimit" />

    <TextView
        android:id="@+id/tvWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_title" android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        android:letterSpacing="0.05" />

    <TextView
        android:id="@+id/tvWelcomeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/welcome_subtitle" android:textColor="#4A4A4A"
        android:textSize="16sp" />

</LinearLayout>